package edu.sjsu.spring2026.group32.player;

public interface GameState {}